2017-09-30  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove unused make_gradient function, and build with
	quote-color.[ch] only if spell-checker == internal

	* src/Makefile.am: move quote-color.[ch] to
	balsa_spell_extra[,_dist]
	* src/meson.build: move quote-color.[ch] to balsa_spell_extra
	* src/quote-color.c: remove unused make_gradient function.
	* src/quote-color.h: ditto.

2017-09-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/imap/meson.build: fix prefix in marshal files.
	* libbalsa/meson.build: ditto.

2017-09-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/imap/meson.build: fix basename of marshal files.
	* libbalsa/meson.build: ditto.

2017-09-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* meson.build: .split() strings returned by custom config commands.

2017-09-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use gnome.genmarshal if glib is new enough

	* meson.build: check whether glib version >= 2.53.4.
	* libbalsa/imap/meson.build: use gnome.genmarshal if glib is new
	enough; otherwise, use glib-genmarshal directly instead of in a
	sh command.
	* libbalsa/meson.build: ditto.

2017-09-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use --output option of glib-genmarshal

	* libbalsa/imap/meson.build:
	* libbalsa/meson.build:

2017-09-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use include_directories instead of explicit -I…

	* libbalsa/imap/meson.build:
	* libbalsa/meson.build:
	* libinit_balsa/meson.build:
	* libnetclient/meson.build:
	* libnetclient/test/meson.build:
	* meson.build:
	* src/meson.build:

2017-09-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/filter-run-dialog.c: include filter-funcs.h instead of
	libbalsa/filter-funcs.h, same as elsewhere.

2017-09-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-app.c (balsa_find_iter_by_data): we no longer ever define
	BALSA_DEBUG_THREADS.

2017-09-23  Peter Bloomfield  <pbloomfield@bellsouth.net>
